  arguments to be used in pre- and postconditions.

Moved annotated libraries from checker/lib/*.jar to the Central Repository:
https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.checkerframework.annotatedlib%22

Moved the Javadoc stub file from checker/lib/javadoc.astub to
checker/resources/javadoc.astub.

Added new type @InternalFormForNonArray to the Signature Checker

---------------------------------------------------------------------------

Version 2.3.2, February 1, 2018

Closed issues:

946, 1133, 1232, 1319, 1625, 1633, 1696, 1709, 1712, 1734, 1738, 1749, 1754,
1760, 1761, 1768, 1769, 1781.

---------------------------------------------------------------------------

Version 2.3.1, January 2, 2018

Closed issues:
1695, 1696, 1697, 1698, 1705, 1708, 1711, 1714, 1715, 1724.

---------------------------------------------------------------------------

Version 2.3.0, December 1, 2017

Removed the deprecated @LazyNonNull type qualifier.
Deprecated most methods in InternalUtils and moved them to either
TreeUtils or TypesUtils. Adapted a few method names and parameter
orders for consistency.

Closed issues:
951, 1356, 1495, 1602, 1605, 1623, 1628, 1636, 1641, 1653, 1655, 1664, 1665,
1681, 1684, 1688, 1690.

---------------------------------------------------------------------------

Version 2.2.2, November 2, 2017

The Interning Checker supports a new annotation, @InternedDistinct, which
indicates that the value is not equals() to any other value.

An annotated version of the Commons IO library appears in checker/lib/ .

Closed issue 1586, which required re-opening issues 293 and 341 until
proper fixes for those are implemented.

Closed issues:
1386, 1389, 1423, 1520, 1529, 1530, 1531, 1546, 1553, 1555, 1565, 1570, 1579,
1580, 1582, 1585, 1586, 1587, 1598, 1609, 1615, 1617.

---------------------------------------------------------------------------

Version 2.2.1, September 29, 2017

Deprecated some methods in AnnotatedTypeMirror and AnnotationUtils, to